# OfflineCap

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.githooks/: pre-commit
.github/workflows/: build.yml  release.yml
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  AndroidComposeConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  KotlinJvmConventionPlugin.kt  PublishConventionPlugin.kt
docs/: FEATURE_ROADMAP.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
offlinecap/: build.gradle.kts
offlinecap-audio/: build.gradle.kts
offlinecap-audio/src/main/kotlin/io/github/alirezajavan/offlinecap/audio/: MediaCodecAudioDecoder.kt  MonoMixer.kt  PcmResampler.kt  PcmWindowing.kt
offlinecap-core/: build.gradle.kts
offlinecap-lingua/: build.gradle.kts
offlinecap-scribe/: build.gradle.kts  consumer-rules.pro
offlinecap-scribe/src/main/cpp/: CMakeLists.txt  jni.cpp  stub.cpp
offlinecap-subtitle/: build.gradle.kts
offlinecap-transcribe/: build.gradle.kts
offlinecap/src/main/kotlin/io/github/alirezajavan/offlinecap/: ModelManager.kt  OfflineCap.kt  WhisperModelRepository.kt
offlinecap/src/test/kotlin/io/github/alirezajavan/offlinecap/: OfflineCapIntegrationTest.kt  WhisperModelRepositoryTest.kt
sample/: build.gradle.kts
sample/src/main/: AndroidManifest.xml
sample/src/main/res/values/: themes.xml
sample/src/main/res/values-night/: themes.xml
(+62 files in other folders)
